<?xml version="1.0" encoding="UTF-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        
       <PreferenceCategory android:title="@string/Jezik" android:defaultValue="1">
            <ListPreference
                android:title="@string/Odaberite"
                android:key="jezik"
                android:entries="@array/jezik"
                android:entryValues="@array/vrijednosti_jezik"
                android:defaultValue="1"
                />
        </PreferenceCategory>
        
        <PreferenceCategory android:title="@string/VrstaEvidencije">
            <ListPreference
                android:title="@string/Odaberite"
                android:key="lista"
                android:entries="@array/lista"
                android:entryValues="@array/vrijednosti_liste"
                android:defaultValue="1"
                />
        </PreferenceCategory>
        
    </PreferenceScreen>
    

