<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewGrupaForma"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="3dp"
    android:paddingBottom="5dp"
    android:orientation="vertical" >
    
   <TextView
        android:id="@+id/twGrupaIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        style="@style/OrangeText"
        android:text="@string/twTxtGrupaIme" />

    <EditText
        android:id="@+id/etGrupaIme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
       <TextView
        android:id="@+id/twGrupaOpis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/OrangeText"
        android:text="@string/twTxtGrupaOpis" />

    <EditText
        android:id="@+id/etGrupaOpis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:maxLength="100"
        android:ems="10" >
    </EditText>
    
    <TextView
        android:id="@+id/twGrupaCijena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/OrangeText"
        android:text="@string/twTxtGrupaCijena" />

    <EditText
        android:id="@+id/etGrupaCijena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:ems="10"
        android:inputType="numberDecimal">
    </EditText>
    
     <TextView
        android:id="@+id/twGrupaCijenaValuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/OrangeText"
        android:text="@string/twTxtGrupaCijenaValuta" />

    <EditText
        android:id="@+id/etGrupaValuta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="3"
        android:ems="10">
    </EditText>
    
    
      <TextView
        android:id="@+id/twGrupaCijenaNaFormi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        style="@style/OrangeText"
        android:text="@string/twTxtGrupaCijenaNaFormi" />

    
      <CheckBox
        android:id="@+id/cbGrupaCijenaNaFormi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"/>
    
    
  
     <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical">
   
        <Button
        android:id="@+id/btnUnesiGrupu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textSize="22dp"
        style="@style/ButtonTextNoShadow"
        android:background="@drawable/button_save"
        android:gravity="center"
        android:drawableRight="@drawable/save"
        android:text="@string/btnTxtUnesiGrupu" /> 

</LinearLayout>

</LinearLayout>

</ScrollView>
