<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
       <TextView
        android:id="@+id/twTerminNaslov"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        style="@style/NaslovText"
        android:text="@string/twTerminNaslov" 
        />      
       
    <TableLayout
        android:id="@+id/tableUnosTermin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingTop="0dip">
  
     <TableRow>

   <Button
        android:id="@+id/btnTerminDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingTop="5dip"
        android:layout_marginLeft="5dp"
        android:textSize="14dp"
        android:drawableRight="@drawable/calendar"
        style="@style/OrangeText"
        android:background="@android:color/transparent"
        android:text="@string/twDatumTermina" />
   
  
    <TextView
        android:id="@+id/twTerminIzabraniDatum"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="0dp"
        android:gravity="left"
        android:textSize="17dp"
        />
  
      </TableRow>
      
     </TableLayout>
    
    
      <TextView
        android:id="@+id/twSpinnerIzaberiGrupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        style="@style/OrangeText"
        android:text="@string/twSpinnerIzaberiGrupa"
        />
    
    <Spinner
        android:id="@+id/spinnerTerminGrupe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    
      <TextView
        android:id="@+id/twTerminRedniBroj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        style="@style/OrangeText"
        android:text="@string/twTerminRedniBroj"
        />
    <EditText
        android:id="@+id/etTerminRB"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:digits="0123456789."
		android:inputType="numberDecimal"
        android:ems="10" >

        <requestFocus />
    </EditText>


  <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"> 
        
    <Button
        android:id="@+id/btnUnesiTermin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:textSize="22dp"
        style="@style/ButtonTextNoShadow"
        android:background="@drawable/button_save"
        android:gravity="center"
        android:drawableRight="@drawable/save"
        android:text="@string/btnTxtUnesiClan" />
    
    </LinearLayout>

</LinearLayout>

